<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Basics</string>
    <string name="firsttitle">First Activity!</string>
    <string name="secondtitle">Second Activity!</string>
    <string name="thirdtitle">Third Activity!</string>
    <string name="opendialog">Open Native Dialog</string>
    <string name="opencustomdialog">Open Custom Dialog</string>
    <string name="opentoast">Open Native Toast</string>
    <string name="opencustomtoast">Open Custom Toast</string>
    <string name="common_toast_title">Common Toast</string>
    <string name="custom_toast_title">Custom Toast</string>
    <string name="second">open the Second Activity!</string>
    <string name="third">open the Third Activity!</string>
    <string name="textHint">Type here!</string>
</resources>